# pytest_lesson

./: README.md  main.py  pyproject.toml
ch1/: pytest.ini  test_two.py
ch1/tasks/: test_four.py  test_three.py
ch2/tasks_proj/tests/: pytest.ini
experiment/: strings.py
experiment/grammar/: main.py  metaclass_test.py  nonlocal_test.py
experiment/notebook/: euler.ipynb
experiment/notebook/.ipynb_checkpoints/: euler-checkpoint.ipynb
langchain_project/: README.md  chapter6.py  example_1_parallel_chains.py  example_1_stdout_callback.py  example_1_streaming_chain.py  lesson1.py  main.py  model_test.py  pyproject.toml  util.py
langchain_project/utils/: model.py
py314/: main.py  pyproject.toml
py314/feature/: placeholder.py
subproject/: main.py  pyproject.toml
tasks_proj/src/tasks/: api.py
